adding chapter 4 and 5 update summary and book.toml for subchapters

--- a/mdbook/book.toml
+++ b/mdbook/book.toml
@@ -6,3 +6,5 @@ title = "Process and Safety - Part 1"
 
 [preprocessor.plantuml]
 plantuml-cmd = "http://localhost:8080"
+
+[preprocessor.chapter-list]
